--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx @tailwindcss/cli -i ./public/input.css -o ./public/output.css --watch"
+    "dev": "npx @tailwindcss/cli -i ./public/input.css -o ./docs/output.css --watch"
     
   },
   "keywords": [],
